GNOME Bugzilla – Bug 301835
should the calendar start on the 1st of month?
Last modified: 2014-12-24 02:50:49 UTC
Distribution: Debian 3.1 Package: gnome-system-tools Severity: trivial Version: 2.8.3 Synopsis: Clock 2.8.3: Wrong display of 2005 May Bugzilla-Product: gnome-system-tools Bugzilla-Component: time-admin Bugzilla-Version: unspecified Description: Description of Problem: Clock 2.8.3 shows 2005 May in it's pop-up calendar in an unlucky format. It should display weeks 17-22 and not weeks 18-23, so that users can jump a month backward/forward with a simple click on the appropriate week. The same problem arises with 2004 August, 2006 January, etc. Steps to reproduce the problem: 1. Left click on the clock in GNOME 2. Turn calendar to May Actual Results: Weeks 18-23 displayed Expected Results: Weeks 17-22 displayed How often does this happen? Always Additional Information: ------- Bug moved to this database by unknown@bugzilla.gnome.org 2005-04-24 22:01 ------- Unknown platform unknown. Setting to default platform "Other". Unknown milestone "unknown" in product "gnome-system-tools". Setting to default milestone for this product, '---' The original reporter of this bug does not have an account here. Reassigning to the person who moved it here, unknown@bugzilla.gnome.org. Previous reporter was eknagy@omikk.bme.hu. Setting to default status "UNCONFIRMED". Setting qa contact to the default for this product. This bug either had no qa contact or an invalid one.
this applet is from gnome-panel, reassigning
Created attachment 51270 [details] What it looks like here The same problem is visible on the calendar from gnome-system-log, assigning to gtk+
Hmm the link disappeared so I can't change the product. For people with more rights, it occurs with libgtk+2.0_0-2.8.0-2mdk here
The same problem exists in gnome 2.30.0. Should change status to new?